--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#################### #################### ####################
+#################### #################### ####################
+#################### #################### ####################
+#################### #################### ####################
+
 # Ignore all system files
 .DS_Store
 
@@ -11,11 +16,16 @@ Functional AffinityNet Work/*.html
 Data
 
 # Ignore XML Scehmatic Files
-***.xml
+# ***.xml
 
 # Ignore local VIS dependencies
 vis
 vis-old
+
+#################### #################### ####################
+#################### #################### ####################
+#################### #################### ####################
+#################### #################### ####################
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
