--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ GENERICS
 Graph Archives
 Functional AffinityNet Work/*.html
 
+Ignore all reference ZIP files
+*.zip
+
 # Ignore all data files (secured, personal information)
 Data
 
