--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # Ignore all system files
 .DS_Store
 
+# Ignore all sensitive keys
+Keys
+*.txt
+
 # Ignore all graphs
 EXT-STRAT
 GENERICS
@@ -19,7 +23,7 @@ Ignore all reference ZIP files
 Data
 *.html
 
-# Ignore XML Scehmatic Files
+# Ignore XML Schematic Files
 # ***.xml
 
 # Ignore local VIS dependencies
